# SohnBot

./: .env.example  .gitignore  README.md  STATUS.md  pyproject.toml
.claude/: settings.local.json
.gemini/commands/: bmad-agent-bmad-master.toml  bmad-agent-bmm-analyst.toml  bmad-agent-bmm-architect.toml  bmad-agent-bmm-dev.toml  bmad-agent-bmm-pm.toml  bmad-agent-bmm-qa.toml  bmad-agent-bmm-quick-flow-solo-dev.toml  bmad-agent-bmm-sm.toml  bmad-agent-bmm-tech-writer.toml  bmad-agent-bmm-ux-designer.toml  bmad-brainstorming.toml  bmad-editorial-review-prose.toml  bmad-editorial-review-structure.toml  bmad-help.toml  bmad-index-docs.toml  bmad-party-mode.toml  bmad-review-adversarial-general.toml  bmad-shard-doc.toml
_bmad-output/implementation-artifacts/: 1-1-project-setup-configuration-system.md  1-2-sqlite-persistence-layer-broker-foundation.md  1-3-telegram-gateway-claude-agent-sdk-integration.md  1-4-scope-validation-path-traversal-prevention.md  1-5-file-read-operations-list-read-search.md  1-6-patch-based-file-edit-with-snapshot-creation.md  1-7-rollback-to-previous-snapshot.md  1-8-structured-operation-logging-notifications.md  1-9-ambiguous-request-postponement.md  2-1-git-status-diff-queries.md  2-2-git-checkout-for-rollback-operations.md  2-3-autonomous-git-commits.md  2-4-enhanced-snapshot-branch-management.md  3-1-runtime-status-snapshot-collection.md  3-2-health-checks-implementation.md  epic-1-retro-2026-02-27.md  (+4 more)
config/: default.toml  registry.py
docs/: PRD.md  development_environment.md
scripts/: migrate.py  setup.ps1  setup.sh
(+87 files in other folders)
