[tool.poetry]
name = "sohnbot"
version = "0.1.0"
description = "Policy-enforced local autonomous execution system with Telegram interface"
authors = ["Mirko <mirko@example.com>"]
readme = "README.md"
packages = [{include = "sohnbot", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
claude-agent-sdk = "^0.1.41"
python-telegram-bot = "^22.6"
httpx = "^0.27"
aiosqlite = "^0.20.0"
structlog = "^24.1.0"
python-dotenv = "^1.0.0"
tomli = {version = "^2.0.0", python = "<3.11"}
patch = "^1.16"
psutil = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.2.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/sohnbot --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py313"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
